--- a/qucs/qucs/qucs.qrc
+++ b/qucs/qucs/qucs.qrc
@@ -24,6 +24,7 @@
         <file>bitmaps/bsim4v30pMOS.png</file>
         <file>bitmaps/buffer.png</file>
         <file>bitmaps/capacitor.png</file>
+        <file>bitmaps/capq.png</file>
         <file>bitmaps/cccs.png</file>
         <file>bitmaps/ccvs.png</file>
         <file>bitmaps/circulator.png</file>
@@ -68,7 +69,6 @@
         <file>bitmaps/ellipse.png</file>
         <file>bitmaps/ellipsearc.png</file>
         <file>bitmaps/equation.png</file>
-        <file>bitmaps/taperedline.png</file>
         <file>bitmaps/fa1b.png</file>
         <file>bitmaps/fa2b.png</file>
         <file>bitmaps/fileclose.png</file>
