Added INDQ component

--- a/qucs/qucs/qucs.qrc
+++ b/qucs/qucs/qucs.qrc
@@ -95,6 +95,7 @@
         <file>bitmaps/iexp.png</file>
         <file>bitmaps/ifile.png</file>
         <file>bitmaps/inductor.png</file>
+        <file>bitmaps/indq.png</file>
         <file>bitmaps/inverter.png</file>
         <file>bitmaps/iprobe.png</file>
         <file>bitmaps/ipulse.png</file>
