--- a/qucs/qucs/qucs.qrc
+++ b/qucs/qucs/qucs.qrc
@@ -191,6 +191,7 @@
         <file>bitmaps/spfile2.png</file>
         <file>bitmaps/spfile3.png</file>
         <file>bitmaps/spicefile.png</file>
+        <file>bitmaps/spiralinductor.png</file>
         <file>bitmaps/subcircuit.png</file>
         <file>bitmaps/subport.png</file>
         <file>bitmaps/substrate.png</file>
