Added circular loop inductor model

--- a/qucs/qucs/qucs.qrc
+++ b/qucs/qucs/qucs.qrc
@@ -28,6 +28,7 @@
         <file>bitmaps/cccs.png</file>
         <file>bitmaps/ccvs.png</file>
         <file>bitmaps/circulator.png</file>
+        <file>bitmaps/circularloop.png</file>
         <file>bitmaps/coaxial.png</file>
         <file>bitmaps/comp_1bit.png</file>
         <file>bitmaps/comp_2bit.png</file>
