Added square inductor component

--- a/qucs/qucs/qucs.qrc
+++ b/qucs/qucs/qucs.qrc
@@ -193,6 +193,7 @@
         <file>bitmaps/spfile3.png</file>
         <file>bitmaps/spicefile.png</file>
         <file>bitmaps/spiralinductor.png</file>
+        <file>bitmaps/squareinductor.png</file>
         <file>bitmaps/subcircuit.png</file>
         <file>bitmaps/subport.png</file>
         <file>bitmaps/substrate.png</file>
