Added MIM capacitor model

--- a/qucs/qucs/qucs.qrc
+++ b/qucs/qucs/qucs.qrc
@@ -111,6 +111,7 @@
         <file>bitmaps/logic_1.png</file>
         <file>bitmaps/marker.png</file>
         <file>bitmaps/MESFET.png</file>
+        <file>bitmaps/mimcap.png</file>
         <file>bitmaps/mirror.png</file>
         <file>bitmaps/mirrory.png</file>
         <file>bitmaps/mod_amp.png</file>
