--- a/qucs/qucs/qucs.qrc
+++ b/qucs/qucs/qucs.qrc
@@ -24,6 +24,7 @@
         <file>bitmaps/bsim4v30pMOS.png</file>
         <file>bitmaps/buffer.png</file>
         <file>bitmaps/capacitor.png</file>
+        <file>bitmaps/capq.png</file>
         <file>bitmaps/cccs.png</file>
         <file>bitmaps/ccvs.png</file>
         <file>bitmaps/circulator.png</file>
@@ -94,6 +95,7 @@
         <file>bitmaps/iexp.png</file>
         <file>bitmaps/ifile.png</file>
         <file>bitmaps/inductor.png</file>
+        <file>bitmaps/indq.png</file>
         <file>bitmaps/inverter.png</file>
         <file>bitmaps/iprobe.png</file>
         <file>bitmaps/ipulse.png</file>
