--- a/qucs/qucs/qucs.qrc
+++ b/qucs/qucs/qucs.qrc
@@ -96,6 +96,7 @@
         <file>bitmaps/ifile.png</file>
         <file>bitmaps/inductor.png</file>
         <file>bitmaps/indq.png</file>
+        <file>bitmaps/spiralinductor.png</file>
         <file>bitmaps/inverter.png</file>
         <file>bitmaps/iprobe.png</file>
         <file>bitmaps/ipulse.png</file>
