Added coil inductor model
This component try to model a coil. It consists of a series RL circuit
with a parallel capacitance. The inductance is calculated according to
the Wheeler formula, but the user can also choose the "improved solenoid
equation" [2]. The turn-to-turn capacitance calculation is described in
[3]. Finally, the series resistance includes the skin depth effect and
hysteresis losses.[1]

[1] Marian K. Kazimierczuk, “High-Frequency Magnetic Components”, John
Wiley & Sons, Ltd. 2009
[2] Peter Csurgai, Miklos Kuczmann, Comparison of various high-frequency
models of RF chip inductors, “Szécheny István” University, Lab. of
Electromagnetic Field, Dept. of Telecommunications, Hungary
[3] Gabriele Grandi, Marian K. Kazimierczuk, Antonio Massarini, and Ugo
Reggiani, „Stray Capacitances of Single-Layer Solenoid Air-Core
Inductors”, IEEE Transactions on Industry Application, Vol. 35, No.5,
September/October 1999

--- a/qucs/qucs/qucs.qrc
+++ b/qucs/qucs/qucs.qrc
@@ -98,6 +98,7 @@
         <file>bitmaps/indq.png</file>
         <file>bitmaps/spiralinductor.png</file>
         <file>bitmaps/circularloop.png</file>
+        <file>bitmaps/coil.png</file>
         <file>bitmaps/inverter.png</file>
         <file>bitmaps/iprobe.png</file>
         <file>bitmaps/ipulse.png</file>
