Addition of the Wattmeter Module
Wattmeter Module, modified the code as advised.
Changed the Power Triangle notations to their universal usage and the Power Factor calculation.
Thanks for all the precious information.

--- a/qucs/qucs/qucs.qrc
+++ b/qucs/qucs/qucs.qrc
@@ -225,6 +225,7 @@
         <file>bitmaps/xnor.png</file>
         <file>bitmaps/xor.png</file>
         <file>bitmaps/ysmith.png</file>
+        <file>bitmaps/wprobe.png</file>
         <file>bitmaps/etran.png</file>
         <file>bitmaps/ecvs.png</file>
         <file>bitmaps/vcresistor.png</file>
