Addition of phasorial and temporal diagrams In this commit, I've added both the phasorial and temporal diagrams. The phasorial diagram represents any complex value, and displays a line which is oriented towards the angle, its size is determined by the real component of that value. It tracks the apparent power(S), Impedance(ohm), Current(I) and Voltage (V). The temporal diagram resembles an oscilloscope, drawing a wave according to its expected value across a certain time. This means that it is now possible to analyse values that would otherwise need a transient simulation to observe. It can track both current and voltage values. Both of these diagrams, due to their functionalities, are limited to AC Simulations. As always, I will attach a PDF on a comment with working examples, I'm keeping my test schematics hoping they will be helpful in the future. Waiting for information on how I should add them to the test suite. Thank you for your time and attention.

--- a/qucs/qucs/qucs.qrc
+++ b/qucs/qucs/qucs.qrc
@@ -148,6 +148,7 @@
         <file>bitmaps/pad3bit.png</file>
         <file>bitmaps/pad4bit.png</file>
         <file>bitmaps/pfet.png</file>
+        <file>bitmaps/phasor.png</file>
         <file>bitmaps/photodiode.png</file>
         <file>bitmaps/phototransistor.png</file>
         <file>bitmaps/pm_mod.png</file>
@@ -222,6 +223,7 @@
         <file>bitmaps/vprobe.png</file>
         <file>bitmaps/vpulse.png</file>
         <file>bitmaps/vrect.png</file>
+        <file>bitmaps/wave.png</file>
         <file>bitmaps/wire.png</file>
         <file>bitmaps/xnor.png</file>
         <file>bitmaps/xor.png</file>
